# PhysTwin

./: .envrc.example  .gitignore  UV_INSTALL_NOTES.md  boba_evaluate_chamfer.py  boba_evaluate_track.py  boba_generate_lbs_inference.py  evaluate.sh  evaluate_chamfer.py  evaluate_track.py  export_gaussian_data.py  export_render_eval_data.py  export_video_human_mask.py  gs_render_dynamics.py  gs_run.sh  gs_run_simulate.sh  gs_run_simulate_white.sh  inference_warp.py  interactive_cube.py  interactive_pte.py  optimize_cma.py  process_data.py  pyproject.toml  script_inference.py  script_optimize.py  script_process_data.py  script_train.py  train_warp.py  visualize_fingers.py  visualize_force.py  visualize_material.py  visualize_render_results.py
boba_results/: final_avg_boba_lbs.csv  final_avg_boba_no_lbs.csv  final_results_boba_lbs.csv  final_results_boba_no_lbs.csv  final_track_boba_lbs.csv  final_track_boba_no_lbs.csv
data_process/: align.py  data_process_mask.py  data_process_pcd.py  data_process_sample.py  data_process_track.py  dense_track.py  io_backend.py  materialize_converted_gaussian_data.py  materialize_converted_masked_gaussian_data.py  o3d_utils.py  segment_util_video.py
data_process/utils/: align_util.py
gaussian_splatting/: evaluate_render.py  generate_interp_poses.py
gaussian_splatting/scene/: dataset_readers.py
qqtt/engine/: cma_optimize_warp.py  trainer_warp.py
qqtt/utils/: config.py  output_dirs.py  visualize.py
scripts/: setup_segmentation_env.sh  setup_shape_prior_env.sh
tests/: test_diagnostic_rendering.py  test_io_backend_window.py  test_materialize_converted_gaussian_data.py  test_materialize_converted_masked_gaussian_data.py
